<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sinulogbg"
    tools:context=".controllers.RegistrationActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/employee_registration_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textSize="43sp"
                    android:textColor="@color/white"
                    android:text="@string/signup_txt"/>


                <EditText
                    android:id="@+id/txtfullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_full_name"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighterBlue"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_input_field"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawableTint="@color/lighterBlue"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighterBlue"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_input_field"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableTint="@color/lighterBlue"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighterBlue"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_input_field"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawableTint="@color/lighterBlue"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/txtCreditCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_credit_card"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighterBlue"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_input_field"
                    android:drawableLeft="@drawable/ic_credit_card"
                    android:drawableTint="@color/lighterBlue"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighterBlue"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_input_field"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableTint="@color/lighterBlue"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    />

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/lighterBlue"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:background="@drawable/custom_input_field"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableTint="@color/lighterBlue"
                    android:drawablePadding="5dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_txt"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_btn_rounded"
                    android:layout_marginBottom="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/txtnoaccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|right"
                        android:text="Already have an account?"
                        android:textSize="16sp"
                        android:textColor="@color/lighterBlue"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/linklogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="Login now"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_weight="2" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>



    </LinearLayout>

</LinearLayout>